--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -1402,8 +1402,8 @@
        "Fog                           21\n",
        "Thunderstorm                  17\n",
        "Fog , Rain                    14\n",
-       "Fog , Thunderstorm             1\n",
        "Rain , Snow                    1\n",
+       "Fog , Thunderstorm             1\n",
        "Name: Events, dtype: int64"
       ]
      },
@@ -2160,37 +2160,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "austin_fixed[\"Date\"]=austin_fixed[\"Date\"].apply(lambda x: datetime.strptime(x, \"%Y-%M-%d\"))"
+    "austin_fixed[\"Date\"]=austin_fixed[\"Date\"].apply(lambda x: datetime.strptime(x, \"%Y-%m-%d\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "descriptor 'toordinal' of 'datetime.date' object needs an argument",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-a668cc9c9456>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maustin_fixed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maustin_fixed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoordinal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0maustin_fixed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/kaggle/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   3589\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3590\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3591\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3592\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3593\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-26-a668cc9c9456>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maustin_fixed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maustin_fixed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoordinal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0maustin_fixed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: descriptor 'toordinal' of 'datetime.date' object needs an argument"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "austin_fixed[\"Date\"]=austin_fixed[\"Date\"].apply(lambda x: datetime.toordinal())\n",
-    "austin_fixed.head()"
+    "austin_fixed[\"Date\"]=austin_fixed[\"Date\"].apply(lambda x: x.toordinal())"
    ]
   },
   {
@@ -2202,9 +2186,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>Snow</th>\n",
+       "      <th>Fog</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Thunderstorm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>735223</td>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>735224</td>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>735225</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>735226</td>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>735227</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Date  TempHighF  TempAvgF  TempLowF  DewPointHighF  DewPointAvgF  \\\n",
+       "0  735223         74        60        45           67.0          49.0   \n",
+       "1  735224         56        48        39           43.0          36.0   \n",
+       "2  735225         58        45        32           31.0          27.0   \n",
+       "3  735226         61        46        31           36.0          28.0   \n",
+       "4  735227         58        50        41           44.0          40.0   \n",
+       "\n",
+       "   DewPointLowF  HumidityHighPercent  HumidityAvgPercent  HumidityLowPercent  \\\n",
+       "0          43.0                 93.0                75.0                57.0   \n",
+       "1          28.0                 93.0                68.0                43.0   \n",
+       "2          23.0                 76.0                52.0                27.0   \n",
+       "3          21.0                 89.0                56.0                22.0   \n",
+       "4          36.0                 86.0                71.0                56.0   \n",
+       "\n",
+       "   ...  VisibilityHighMiles  VisibilityAvgMiles  VisibilityLowMiles  \\\n",
+       "0  ...                 10.0                 7.0                 2.0   \n",
+       "1  ...                 10.0                10.0                 5.0   \n",
+       "2  ...                 10.0                10.0                10.0   \n",
+       "3  ...                 10.0                10.0                 7.0   \n",
+       "4  ...                 10.0                10.0                 7.0   \n",
+       "\n",
+       "   WindHighMPH  WindAvgMPH  WindGustMPH  Snow  Fog  Rain  Thunderstorm  \n",
+       "0         20.0         4.0         31.0     0    0     1             1  \n",
+       "1         16.0         6.0         25.0     0    0     0             0  \n",
+       "2          8.0         3.0         12.0     0    0     0             0  \n",
+       "3         12.0         4.0         20.0     0    0     0             0  \n",
+       "4         10.0         2.0         16.0     0    0     0             0  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "austin_fixed.head(5)"
    ]
@@ -2263,11 +2454,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y = austin_fixed['TempAvgF']\n",
+    "X = austin_fixed[['TempHighF','TempLowF','DewPointHighF',\n",
+    " 'DewPointAvgF',\n",
+    " 'DewPointLowF',\n",
+    " 'HumidityHighPercent',\n",
+    " 'HumidityAvgPercent',\n",
+    " 'HumidityLowPercent',\n",
+    " 'SeaLevelPressureHighInches',\n",
+    " 'SeaLevelPressureAvgInches',\n",
+    " 'SeaLevelPressureLowInches',\n",
+    " 'VisibilityHighMiles',\n",
+    " 'VisibilityAvgMiles',\n",
+    " 'VisibilityLowMiles',\n",
+    " 'WindHighMPH',\n",
+    " 'WindAvgMPH',\n",
+    " 'WindGustMPH',\n",
+    " 'Snow',\n",
+    " 'Fog',\n",
+    " 'Rain',\n",
+    " 'Thunderstorm']]"
    ]
   },
   {
@@ -2279,11 +2490,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -2298,11 +2510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
@@ -2327,11 +2540,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1056"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "ts_rows = int(np.ceil(austin_fixed.shape[0]*0.8))\n",
+    "ts_rows"
    ]
   },
   {
@@ -2343,11 +2569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "X_ts_train = X[:][:ts_rows]\n",
+    "X_ts_test = X[:][ts_rows:]"
    ]
   },
   {
@@ -2359,11 +2587,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y_ts_train = y[:][:ts_rows]\n",
+    "y_ts_test = y[:][ts_rows:]"
    ]
   },
   {
@@ -2383,11 +2613,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "from sklearn import svm"
    ]
   },
   {
