terminado, o eso creo

--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "max     107.000000    93.000000    81.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "0.10310841546626232"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "0.09401061410159212"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        "4                       "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1274,7 +1274,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
        "Name: Events, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1858,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2120,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,11 +2183,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "y=austin_fixed.TempAvgF\n",
+    "X=austin_fixed[['TempHighF',\n",
+    " 'TempLowF',\n",
+    " 'DewPointHighF',\n",
+    " 'DewPointAvgF',\n",
+    " 'DewPointLowF',\n",
+    " 'HumidityHighPercent',\n",
+    " 'HumidityAvgPercent',\n",
+    " 'HumidityLowPercent',\n",
+    " 'SeaLevelPressureHighInches',\n",
+    " 'SeaLevelPressureAvgInches',\n",
+    " 'SeaLevelPressureLowInches',\n",
+    " 'VisibilityHighMiles',\n",
+    " 'VisibilityAvgMiles',\n",
+    " 'VisibilityLowMiles',\n",
+    " 'WindHighMPH',\n",
+    " 'WindAvgMPH',\n",
+    " 'WindGustMPH',\n",
+    " 'Snow',\n",
+    " 'Fog',\n",
+    " 'Rain',\n",
+    " 'Thunderstorm']]"
    ]
   },
   {
@@ -2199,11 +2220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -2218,11 +2239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
@@ -2247,11 +2268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1056"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "ts_rows=int(np.ceil(austin_fixed.shape[0]*.8))\n",
+    "ts_rows\n"
    ]
   },
   {
@@ -2263,11 +2296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1056, 21) (263, 21)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "X_ts_train=X[:][:ts_rows]\n",
+    "X_ts_test=X[:][ts_rows:]\n",
+    "print(X_ts_train.shape,X_ts_test.shape)"
    ]
   },
   {
@@ -2279,11 +2322,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1056,) (263,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "y_ts_train=y[:ts_rows]\n",
+    "y_ts_test=y[ts_rows:]\n",
+    "print(y_ts_train.shape,y_ts_test.shape)"
    ]
   },
   {
@@ -2303,11 +2356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "from sklearn import svm\n"
    ]
   },
   {
@@ -2319,11 +2372,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximiliano/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.11363636363636363"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "clf = svm.SVC()\n",
+    "clf.fit(X_train, y_train)\n",
+    "clf.score(X_test,y_test)\n"
    ]
   },
   {
@@ -2337,11 +2411,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximiliano/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.09125475285171103"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "clf = svm.SVC()\n",
+    "clf.fit(X_ts_train, y_ts_train)\n",
+    "clf.score(X_ts_test,y_ts_test)\n"
    ]
   },
   {
