--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -2184,11 +2184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "ts_rows = int(round(len(austin_fixed)*80/100))"
    ]
   },
   {
@@ -2200,11 +2201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_ts_train = x.iloc[ts_rows]\n",
+    "X_ts_test = x.iloc[ts_rows]"
    ]
   },
   {
@@ -2216,11 +2218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "Y_ts_train = y.iloc[ts_rows]\n",
+    "Y_ts_test = y.iloc[ts_rows]"
    ]
   },
   {
@@ -2240,11 +2244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "from sklearn import svm"
    ]
   },
   {
