--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -2201,12 +2201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_ts_train = x.iloc[ts_rows]\n",
-    "X_ts_test = x.iloc[ts_rows]"
+    "X_ts_train = x.iloc[0: ts_rows]\n",
+    "X_ts_test = x.iloc[ts_rows: ]"
    ]
   },
   {
@@ -2218,13 +2218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "Y_ts_train = y.iloc[ts_rows]\n",
-    "Y_ts_test = y.iloc[ts_rows]"
+    "Y_ts_train = y.iloc[0: ts_rows]\n",
+    "Y_ts_test = y.iloc[ts_rows: ]"
    ]
   },
   {
@@ -2261,11 +2261,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "clf = svm.SVC()\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13636363636363635"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(X_test, y_test)"
    ]
   },
   {
@@ -2279,11 +2322,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.10606060606060606"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "clf.fit(X_ts_train, Y_ts_train)\n",
+    "clf.score(X_ts_test, Y_ts_test)\n"
    ]
   },
   {
