--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -2336,19 +2336,41 @@
     {
      "data": {
       "text/plain": [
-       "0.10606060606060606"
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "\n",
-    "clf.fit(X_ts_train, Y_ts_train)\n",
-    "clf.score(X_ts_test, Y_ts_test)\n"
+    "clf = svm.SVC()\n",
+    "clf.fit(X_ts_train, Y_ts_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10606060606060606"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(X_ts_test, Y_ts_test)"
    ]
   },
   {
