--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -7233,11 +7233,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "x = austin_fixed[['TempHighF',\n",
+    " 'TempLowF',\n",
+    " 'DewPointHighF',\n",
+    " 'DewPointAvgF',\n",
+    " 'DewPointLowF',\n",
+    " 'HumidityHighPercent',\n",
+    " 'HumidityAvgPercent',\n",
+    " 'HumidityLowPercent',\n",
+    " 'SeaLevelPressureHighInches',\n",
+    " 'SeaLevelPressureAvgInches',\n",
+    " 'SeaLevelPressureLowInches',\n",
+    " 'VisibilityHighMiles',\n",
+    " 'VisibilityAvgMiles',\n",
+    " 'VisibilityLowMiles',\n",
+    " 'WindHighMPH',\n",
+    " 'WindAvgMPH',\n",
+    " 'WindGustMPH',\n",
+    " 'Snow',\n",
+    " 'Fog',\n",
+    " 'Rain',\n",
+    " 'Thunderstorm']]\n",
+    "\n",
+    "y = austin_fixed ['TempAvgF']\n"
    ]
   },
   {
@@ -7249,11 +7273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -7268,11 +7294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x , y, test_size = 0.2)\n"
    ]
   },
   {
@@ -7297,11 +7325,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1055"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "ts_rows = int(round(len(austin_fixed)*0.8,0))\n",
+    "ts_rows\n"
    ]
   },
   {
@@ -7313,11 +7355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "X_ts_train = x[:ts_rows]\n",
+    "X_ts_test = x[ts_rows:]"
    ]
   },
   {
@@ -7329,11 +7374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "Y_ts_train = y[:ts_rows]\n",
+    "Y_ts_test = y[ts_rows:]"
    ]
   },
   {
@@ -7353,11 +7401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "from sklearn import svm"
    ]
   },
   {
@@ -7369,11 +7419,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marcojoseruedaaguila/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.12121212121212122"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "model = svm.SVC()\n",
+    "model.fit(X_train, y_train)\n",
+    "model.score(X_test, y_test)"
    ]
   },
   {
@@ -7387,11 +7460,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marcojoseruedaaguila/miniconda3/envs/ironhack/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.09090909090909091"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "model.fit(X_ts_train, Y_ts_train)\n",
+    "model.score(X_ts_test, Y_ts_test)"
    ]
   },
   {
