--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -1453,8 +1453,8 @@
        "Fog                           21\n",
        "Thunderstorm                  17\n",
        "Fog , Rain                    14\n",
-       "Rain , Snow                    1\n",
        "Fog , Thunderstorm             1\n",
+       "Rain , Snow                    1\n",
        "Name: Events, dtype: int64"
       ]
      },
@@ -2753,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2764,7 +2764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2976,7 +2976,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2987,7 +2987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3001,7 +3001,7 @@
        "Name: TempAvgF, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3019,7 +3019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3069,11 +3069,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1055"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "ts_rows = len(x_train.index)\n",
+    "ts_rows"
    ]
   },
   {
@@ -3085,11 +3097,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "X_ts_train = x[:ts_rows]\n",
+    "X_ts_test = x[ts_rows:]"
    ]
   },
   {
@@ -3101,11 +3115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y_ts_train = y[:ts_rows]\n",
+    "y_ts_test = y[ts_rows:]"
    ]
   },
   {
@@ -3125,11 +3141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "from sklearn import svm"
    ]
   },
   {
@@ -3141,11 +3158,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "clf = svm.SVC(gamma='scale')\n",
+    "clf.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.041666666666666664"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score = clf.score(x_test, y_test)\n",
+    "score"
    ]
   },
   {
@@ -3159,19 +3212,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "clf = svm.SVC(gamma='scale')\n",
+    "clf.fit(X_ts_train, y_ts_train)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015151515151515152"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### We hope you have learned a lot of useful stuff in this lab!"
+    "score = clf.score(X_ts_test, y_ts_test)\n",
+    "score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
